Update header link to point to the live CineMood AI site

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="app-container">
       <!-- Aplikācijas virsraksts -->
       <div class="header">
-        <a href="index.html">
+        <a href="http://cinemood.ai.tilda.ws/latvian">
           <img
             src="Cinemood_ok.png"
             alt="CineMood AI Logo"
